k8s/base/api-gateway/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
spec:
  selector:
    app: api-gateway
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
